Fix alignment problems.

--- a/src/styles/GeneralInstruction.css
+++ b/src/styles/GeneralInstruction.css
@@ -13,9 +13,20 @@
 
   .GeneralInstruction {
     margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: 1.5fr 8fr 1fr;
+
+    .GeneralInstructionRemove {
+      border: none;
+      background-color: var(--blue);
+      border-radius: 5px;
+      color: white;
+      font-size: 1rem;
+      margin: 0px 10px;
+    }
   }
 
-  button {
+  .GeneralInstructionAdd {
     background-color: var(--blue);
     color: white;
     padding: 10px 20px;
